# Vital-CLI

./: .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml
vital/: __init__.py  agent.py  ai_engine.py  config.py  context.py  context.py.save  executor.py  interactive.py  main.py  memory.py  patch.py  providers.py  rollback.py  safety.py  session.py  verify.py
vital/commands/: commit.py  debug.py  doc.py  explain.py  fix.py  init.py  refactor.py  test.py
